# Crew_ai_tests

./: requirements.txt
ai/: pyproject.toml  report.md
ai/src/ai/: crew.py  main.py
ai/src/ai/tools/: pdf_search_tool.py
ai_news/: pyproject.toml
ai_news/news/: 2025-05-06_01-20-25_news_article.md
ai_news/src/ai_news/: crew.py  main.py
papa/: .gitignore  README.md  pyproject.toml  tva.csv
papa/db/: chroma.sqlite3
papa/src/papa/: crew.py  main.py
papa/src/papa/config/: agents.yaml  tasks.yaml
pdf_rag/: pyproject.toml  report.md
pdf_rag/db/: chroma.sqlite3
pdf_rag/src/pdf_rag/: crew.py
poem_flow/: poem.txt  pyproject.toml
